# import-visibility-parent

./: BUILD.bazel  MODULE.bazel  go.mod  go.sum  library.go
cmd/: BUILD.bazel  main.go
