load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

gazelle(name = "gazelle")

go_library(
    name = "import-visibility-parent",
    srcs = ["library.go"],
    importpath = "github.com/bstoll/import-visibility-parent",
    visibility = ["//visibility:public"],
)
