module(
    name = "import-visibility-parent",
)

bazel_dep(name = "gazelle", version = "0.41.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.51.0", repo_name = "io_bazel_rules_go")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bstoll_import_visibility_child")

#go_deps_dev = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
#go_deps_dev.gazelle_override(
#    directives = [
#        "gazelle:resolve go github.com/bstoll/import-visibility-parent @import-visibility-parent//:import-visibility-parent",  # keep
#    ],
#    path = "github.com/bstoll/import-visibility-child",
#)
#inject_repo(go_deps, "import-visibility-parent")